--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "anyio>=4.5",
     "click>=8.1.0",
     "httpx>=0.27",
-    "mcp",
+    "mcp>=1.22.0",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "pydantic>=2.0.0",
@@ -33,6 +33,7 @@ dependencies = [
 
 [project.scripts]
 mesh-tool-server = "mesh_mcp_server.server:main"
+mcp-agents-server = "mesh_mcp_server.agents_server:app"
 
 [build-system]
 requires = ["hatchling"]
@@ -48,7 +49,7 @@ venv = ".venv"
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
-ignore = []
+ignore = ["E501"]
 
 [tool.ruff]
 line-length = 88
