--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 HEURIST_API_KEY=<your-heurist-api-key>
 MESH_API_ENDPOINT=https://sequencer-v2.heurist.xyz
-MESH_METADATA_ENDPOINT=https://mesh.heurist.ai/mesh_agents_metadata.json
+MESH_METADATA_ENDPOINT=https://mesh.heurist.ai/metadata.json
+
+AUTH_ENABLED=true
+DYNAMODB_TABLE_NAME=api_credits
+METADATA_REFRESH_INTERVAL=600
