--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "aiohttp>=3.9.0",
     "python-dotenv>=1.0.0",
     "requests>=2.28.0",
-    "colorlog>=6.7.0"
+    "colorlog>=6.7.0",
+    "boto3>=1.34.0",
 ]
 
 [project.scripts]
