update README, update curated list

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 HEURIST_API_KEY=<your-heurist-api-key>
-MESH_API_ENDPOINT=https://sequencer-v2.heurist.xyz
+MESH_API_ENDPOINT=https://mesh.heurist.xyz
 MESH_METADATA_ENDPOINT=https://mesh.heurist.ai/metadata.json
 
 AUTH_ENABLED=true
