feat: add usage tracking for agent API calls

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ MESH_METADATA_ENDPOINT=https://mesh.heurist.ai/metadata.json
 AUTH_ENABLED=true
 DYNAMODB_TABLE_NAME=api_credits
 METADATA_REFRESH_INTERVAL=600
+
+# Usage Tracking (GCP PostgreSQL)
+USAGE_API_URL=http://151.245.184.3:18599
+USAGE_API_KEY=your_usage_api_key
